<resources>
  <string name="app_name">Orbot</string>
  <string name="app_description">Orbot is a free proxy app that empowers other apps to use the internet more securely. Orbot uses Tor to encrypt your Internet traffic and then hides it by bouncing through a series of computers around the world. Tor is free software and an open network that helps you defend against a form of network surveillance that threatens personal freedom and privacy, confidential business activities and relationships, and state security known as traffic analysis.</string>
  <string name="internal_web_url">http://orbot/</string>
  <string name="default_web_url">http://check.torproject.org</string>
  <string name="secure_default_web_url">https://check.torproject.org</string>
  <string name="tor_check_api_url">https://check.torproject.org/?TorButton=true</string>
  <string name="control_permission_label">start and stop Tor</string>
  <string name="tor_proxy_service_process">torproxyservice</string>
  <string name="status_starting_up">Orbot is starting&#8230;</string>
  <string name="status_activated">Connected to the Tor network</string>
  <string name="status_disabled">Orbot is deactivated</string>
  <string name="status_shutting_down">Orbot is shutting down</string>
  <string name="tor_process_starting">Starting Tor client&#8230;</string>
  <string name="tor_process_complete">complete.</string>
  <string name="tor_process_waiting">waiting.</string>
  <string name="not_anonymous_yet">WARNING: Your traffic is not anonymous yet! Please configure your applications to use HTTP proxy 127.0.0.1:8118 or SOCKS4A or SOCKS5 proxy 127.0.0.1:9050</string>
  <string name="menu_home">Home</string>
  <string name="menu_browse">Browse</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_log">Log</string>
  <string name="menu_info">Help</string>
  <string name="menu_apps">Apps</string>
  <string name="menu_start">Start</string>
  <string name="menu_stop">Stop</string>
  <string name="menu_about">About</string>
  <string name="menu_wizard">Wizard</string>
  <string name="main_layout_download">Download</string>
  <string name="main_layout_upload">Upload</string>
  <string name="button_help">Help</string>
  <string name="button_close">Close</string>
  <string name="button_about">About</string>
  <string name="button_clear_log">Clear Log</string>
  <string name="menu_verify">Check</string>
  <string name="menu_exit">Exit</string>
  <string name="menu_scan">Scan BridgeQR</string>
  <string name="menu_share_bridge">Share BridgeQR</string>
  <string name="press_to_start">- long press to start -</string>
  <string name="pref_trans_proxy_group">Transparent Proxying (Requires Root)</string>
  <string name="pref_trans_proxy_title">Transparent Proxying</string>
  <string name="pref_trans_proxy_summary">Automatic Torifying of Apps</string>
  <string name="pref_transparent_all_title">Tor Everything</string>
  <string name="pref_transparent_all_summary">Proxy traffic for all apps through Tor</string>
  <string name="pref_transparent_port_fallback_title">Port Proxy Fallback</string>
  <string name="pref_transparent_port_fallback_summary">WARNING: Circumvents common ports (80, 443, etc). *USE ONLY* if \'All\' or \'App\' mode doesn\'t work.</string>
  <string name="pref_transparent_port_title">Port List</string>
  <string name="pref_transparent_port_summary">List of ports to proxy. *USE ONLY* if \'All\' or \'App\' mode doesn\'t work</string>
  <string name="pref_transparent_port_dialog">Enter ports to proxy</string>
  <string name="pref_has_root">Request Root Access</string>
  <string name="pref_has_root_summary">Request root access for transparent proxying</string>
  <string name="status_install_success">Tor binaries successfully installed!</string>
  <string name="status_install_fail">The Tor binary files were unable to be installed. Please check the log and notify tor-assistants@torproject.org</string>
  <string name="title_error">Application Error</string>
  <string name="wizard_title">Orbot</string>
  <string name="wizard_btn_tell_me_more">About Orbot</string>
  <string name="btn_next">Next</string>
  <string name="btn_back">Back</string>
  <string name="btn_finish">Finish</string>
  <string name="btn_okay">Okay</string>
  <string name="btn_cancel">Cancel</string>
  <string name="wizard_details">Some Orbot Details</string>
  <string name="wizard_details_msg">Orbot is an open-source application that contains Tor, LibEvent and Polipo. It provides a local HTTP proxy (8118) and a SOCKS proxy (9050) into the Tor network. Orbot also has the ability, on rooted device, to send all internet traffic through Tor.</string>
  <string name="wizard_permissions_root">Permission Granted</string>
  <string name="wizard_permissions_stock">Orbot Permissions</string>
  <string name="wizard_premissions_msg_root">Excellent! We\'ve detected that you have root permissions enabled for Orbot. We will use this power wisely.</string>
  <string name="wizard_permissions_msg_stock"> While it is not required, Orbot can become a more powerful tool if your device has root access. Use the button below to grant Orbot superpowers! </string>
  <string name="wizard_permissions_no_root">If you don\'t have root access or have no idea what we\'re talking about, just be sure to use apps made to work with Orbot.</string>
  <string name="wizard_permissions_consent">I understand and would like to continue without Superuser</string>
  <string name="wizard_permission_enable_root">Grant Root for Orbot</string>
  <string name="wizard_configure">Configure Torification</string>
  <string name="wizard_configure_msg">Orbot gives you the option to route all application traffic through Tor OR to choose your applications individually.</string>
  <string name="wizard_configure_all">Proxy All Apps Through Tor</string>
  <string name="wizard_configure_select_apps">Select Individual Apps for Tor</string>
  <string name="wizard_tips_tricks">Orbot-enabled Apps</string>
  <string name="wizard_tips_msg">The apps below were developed to work with Orbot. Click each button to install now, or you can find them later on Google Play, at GuardianProject.info website or via F-Droid.org.</string>
  <string name="wizard_tips_otrchat">ChatSecure - Secure instant messaging client for Android</string>
  <string name="wizard_tips_proxy">Proxy Settings - Learn how to configure apps to work with Orbot</string>
  <string name="wizard_tips_duckgo">DuckDuckGo Search Engine app</string>
  <string name="duckgo_apk_url">https://duckduckgo.com/android/latest.apk</string>
  <string name="wizard_tips_firefox">Proxy Mobile add-on for Firefox (https://guardianproject.info/apps/firefoxprivacy)</string>
  <string name="proxymob_setup_url">https://guardianproject.info/apps/firefoxprivacy</string>
  <string name="wizard_tips_twitter">Set Twitter proxy to host \"localhost\" and port 8118</string>
  <string name="wizard_tips_story_maker">StoryMaker - Make a story and leave it to tor for security!</string>
  <string name="story_maker_url">https://play.google.com/store/apps/details?id=info.guardianproject.mrapp</string>
  <string name="twitter_setup_url">https://guardianproject.info/2012/05/02/orbot-your-twitter/</string>
  <string name="wizard_proxy_help_info">Proxy Settings</string>
  <string name="wizard_proxy_help_msg">If the Android app you are using can support the use of an HTTP or SOCKS proxy, then you can configure it to connect to Orbot and use Tor.\n\n\n    The host settings is 127.0.0.1 or \"localhost\". For HTTP, the port setting is 8118. For SOCKS, the proxy is 9050. You should use SOCKS4A or SOCKS5 if possible.\n    \n\n\n    You can learn more about proxying on Android via the FAQ at: http://tinyurl.com/proxyandroid\n    </string>
  <string name="wizard_final">Orbot is ready!</string>
  <string name="wizard_final_msg">Millions of people around the world use Tor for a wide variety of reasons.\n\nJournalists and bloggers, human rights defenders, law enforcement officers, soldiers, corporations, citizens of repressive regimes, and just ordinary citizens&#8230; and now you are ready to, as well!</string>
  <string name="wizard_exit_at_first_screen_toast">Please configure Orbot before you can start using it!</string>
  <string name="connect_first_time">You\'ve successfully connected to the Tor network - but this does NOT mean your device is secure. You can use the \'Check\' option from the menu to test your browser. \n\nVisit us at https://guardianproject.info/apps/orbot or send an email to help@guardianproject.info to learn more.</string>
  <string name="tor_check">This will open your web browser to https://check.torproject.org in order to see if Orbot is probably configured and you are connected to Tor.</string>
  <string name="pref_hs_group">Hidden Service Hosting</string>
  <string name="pref_general_group">General</string>
  <string name="pref_start_boot_title">Start Orbot on Boot</string>
  <string name="pref_start_boot_summary">Automatically start Orbot and connect Tor when your Android device boots</string>
  <string name="wizard_title_msg">Orbot brings Tor to Android!\n\nTor helps you defend against content filtering, traffic analysis and network surveillance that threatens privacy, confidential information and personal relationships.\n\nThis wizard will help you configure Orbot and Tor on your device.</string>
  <string name="wizard_warning_title">Warning</string>
  <string name="wizard_warning_msg">Simply installing Orbot will not automatically anonymize your mobile traffic.\n\nYou must properly configure Orbot, your device and other apps to successfully use Tor.</string>
  <string name="wizard_permissions_title">Permissions</string>
  <string name="wizard_permissions_root_msg1">You can optionally grant Orbot \'Superuser\' access to enable advanced features, such as Transparent Proxying.</string>
  <string name="wizard_permissions_root_msg2">If you do not want to do this, please make sure to use apps made to work with Orbot</string>
  <string name="wizard_permissions_no_root_msg">Your device does not appear to be rooted or provide root or \'Superuser\' access.\n\nPlease try the \'Apps\' mode on the main screen instead.</string>
  <string name="wizard_tips_title">Orbot-Enabled Apps</string>
  <string name="wizard_tips_gibberbot">ChatSecure: Secure chat app with Off-the-Record Encryption</string>
  <string name="gibberbot_apk_url">https://guardianproject.info/releases/chatsecure-latest.apk</string>
  <string name="wizard_tips_orweb">Orweb: Privacy-enhanced browser that works through Tor</string>
  <string name="orweb_apk_url">https://guardianproject.info/releases/orweb-latest.apk</string>
  <string name="wizard_tips_play">Find all Guardian Project apps on Google Play</string>
  <string name="wizard_tips_play_url">https://play.google.com/store/search?q=guardianproject</string>
  <string name="wizard_transproxy_title">Transparent Proxying</string>
  <string name="wizard_transproxy_msg">This allows your apps to automatically run through the Tor network without any configuration.</string>
  <string name="wizard_transproxy_hint">(Check this box if you have no idea what we are talking about)</string>
  <string name="wizard_transproxy_none">None</string>
  <string name="pref_transparent_tethering_title">Tor Tethering</string>
  <string name="pref_transparent_tethering_summary">Enable Tor Transparent Proxying for Wifi and USB Tethered Devices (requires restart)</string>
  <string name="button_grant_superuser">Request Superuser Access</string>
  <string name="pref_select_apps">Select Apps</string>
  <string name="pref_select_apps_summary">Choose Apps to Route Through Tor</string>
  <string name="pref_node_configuration">Node Configuration</string>
  <string name="wizard_locale_title">Choose Language</string>
  <string name="wizard_locale_msg">Leave default or switch the current language</string>
    <string name="menu_verify_browser">Check Browser</string>
</resources>