<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2008 Esmertec AG.
 * Copyright (C) 2008 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<menu xmlns:yourapp="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
 <item android:id="@+id/menu_start"
        android:title="@string/menu_start"
         android:icon="@drawable/ic_action_start"
          yourapp:showAsAction="ifRoom"
         />

 <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
         android:icon="@drawable/ic_action_settings"
         yourapp:showAsAction="always"
         />

 <item 
     android:id="@+id/menu_verify_list"
        android:title="@string/menu_verify"
         android:icon="@drawable/ic_action_browse"
                  yourapp:showAsAction="always"         
        >
        <menu>
        <item android:id="@+id/menu_verify"
        android:title="@string/menu_verify_browser"
         android:icon="@drawable/ic_action_browse"  
        />
 
        <!-- 
        <item android:id="@+id/menu_use_chatsecure"
        android:title="@string/menu_use_chatsecure"
         android:icon="@drawable/ic_chatsecure" 
        /> -->
        
        </menu>
 </item>
 <item android:id="@+id/menu_about"
        android:title="@string/menu_about"
         android:icon="@drawable/ic_menu_about"
                  yourapp:showAsAction="ifRoom"
         
         />
 
  <item android:id="@+id/menu_wizard"
        android:title="@string/menu_wizard"
         android:icon="@drawable/ic_menu_goto"
                  yourapp:showAsAction="ifRoom"
         
         />
 
  <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
         android:icon="@drawable/ic_menu_exit"
                  yourapp:showAsAction="never"
         
         />
  
  <item android:id="@+id/menu_vpn"
      android:title="start VPN"
      yourapp:showAsAction="never"/>
   <!-- 
  <item android:id="@+id/menu_diag"
        android:title="Test Mode"
         android:icon="@drawable/ic_menu_check"
                  yourapp:showAsAction="never"
         
         />
          -->
 
</menu>
<!-- 
 MenuItem mItem = null;
        
        mItemOnOff = menu.add(0, 1, Menu.NONE, getString(R.string.menu_start));
        mItemOnOff.setIcon(android.R.drawable.ic_media_play);
        mItemOnOff.setAlphabeticShortcut('t');
        mItemOnOff.setShowAsAction(MenuItem.SHOW_AS_ACTION_NEVER);
        
        mItem = menu.add(0, 4, Menu.NONE, getString(R.string.menu_settings));
        mItem.setIcon(R.drawable.ic_menu_settings);
        mItem.setShowAsAction(MenuItem.SHOW_AS_ACTION_ALWAYS);
       
        mItem = menu.add(0, 7, Menu.NONE, getString(R.string.menu_verify));
        mItem.setIcon(R.drawable.ic_menu_check);
        mItem.setShowAsAction(MenuItem.SHOW_AS_ACTION_ALWAYS);
      
        mItem =  menu.add(0,6, Menu.NONE, getString(R.string.menu_about));
        mItem.setIcon(R.drawable.ic_menu_about);
        mItem.setShowAsAction(MenuItem.SHOW_AS_ACTION_NEVER);
        
        mItem = menu.add(0, 3, Menu.NONE, getString(R.string.menu_wizard));
        mItem.setIcon(R.drawable.ic_menu_goto);
        mItem.setShowAsAction(MenuItem.SHOW_AS_ACTION_NEVER);
       
        mItem = menu.add(0, 8, Menu.NONE, getString(R.string.menu_exit));
        mItem.setIcon(R.drawable.ic_menu_exit);
        mItem.setShowAsAction(MenuItem.SHOW_AS_ACTION_NEVER);
  -->
