<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
            

<RelativeLayout 
	android:layout_width="fill_parent" 
	android:layout_height="70sp" 
	android:id="@+id/relativeLayout1" 
	android:layout_gravity="center_vertical|center_horizontal"
	android:background="#000000"
	>
        <ImageView 
        	android:src="@drawable/warning" 
        	android:id="@+id/orbot_image" 
        	android:layout_width="wrap_content" 
        	android:layout_height="wrap_content" 
        	android:layout_alignParentLeft="true"
        	android:paddingLeft="20sp" >
        </ImageView>
        <TextView 
        	android:textColor="#FFFFFF"
        	android:textSize="10pt" 
        	android:layout_toRightOf="@id/orbot_image" 
        	android:gravity="center_vertical"
       	 	android:layout_height="fill_parent" 
        	android:id="@+id/WizardTextTitle" 
        	android:layout_width="wrap_content" 
        	android:fadingEdge="vertical" 
        	android:text="TITLE"     
        	android:singleLine="true" 
        	android:layout_centerInParent="true" 
        	android:paddingLeft="5sp"
        	> 
        </TextView>
    </RelativeLayout>   
<TableLayout  android:id="@+id/TableLayout01" android:stretchColumns="*" android:layout_height="fill_parent" android:layout_width="wrap_content">

<TableRow android:layout_margin="10dip"   android:id="@+id/TableRow01" android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="fill_parent">


	<ScrollView android:id="@+id/helpscrollview" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		 android:layout_span="3">    

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#575757"
    android:orientation="vertical"
    android:paddingRight="20dip" >

    <TextView
        android:id="@+id/WizardTextBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.31"
        android:padding="20dip"
        android:text="@string/wizard_tips_msg"
        android:textColor="#ffffff"
        android:textSize="8pt" >
    </TextView>

    <Button
        android:id="@+id/WizardRootButtonInstallOrweb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10px"
        android:drawableLeft="@drawable/icon_orweb"
        android:text="@string/wizard_tips_orweb" />

    <Button
        android:id="@+id/WizardRootButtonInstallGibberbot"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10px"
        android:drawableLeft="@drawable/ic_launcher_gibberbot"
        android:text="@string/wizard_tips_gibberbot" />

    
    <Button
        android:id="@+id/WizardRootButtonInstallDuckgo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10px"
        android:drawableLeft="@drawable/ic_duckduckgo"
        android:text="@string/wizard_tips_duckgo" />
    
    <Button
        android:id="@+id/WizardRootButtonInstallFirefox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10px"
        android:drawableLeft="@drawable/icon_firefox"
        android:text="@string/wizard_tips_firefox" />
    
    <Button
        android:id="@+id/WizardRootButtonInstallTwitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10px"
        android:drawableLeft="@drawable/ic_twitter"
        android:text="@string/wizard_tips_twitter" />
    
    <!-- 
     <Button
        android:id="@+id/WizardRootButtonGooglePlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10px"
        android:drawableLeft="@drawable/ic_play"
        android:text="@string/wizard_tips_play" />
     -->

</LinearLayout>

		</ScrollView>
		
</TableRow>
<TableRow android:background="#000000" android:layout_marginTop="10dip" android:paddingTop="10dip" android:id="@+id/TableRow01" android:textColor="#00ff00" android:layout_width="fill_parent" android:layout_height="30px">
	   	<Button android:text="@string/btn_back" android:id="@+id/btnWizard1" android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    	<Button android:text="@string/btn_next" android:id="@+id/btnWizard2"  android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>	    
</TableRow>			
</TableLayout>
</LinearLayout>


