<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
            android:background="@drawable/background">
            
<RelativeLayout 
	android:layout_width="match_parent" 
	android:layout_height="wrap_content" 
	android:id="@+id/relativeLayout1" 
	android:layout_gravity="center_horizontal">
         <TextView android:textSize="10pt" 
        	
        	android:layout_alignParentTop="true"
       	 	android:layout_height="wrap_content" 
        	android:id="@+id/WizardTextTitle" 
        	android:layout_width="wrap_content" 
        	android:fadingEdge="vertical" 
        	android:text="TITLE" 
        	android:textColor="#00ff00" 
        	android:singleLine="true" 
          	android:padding="20px" android:layout_centerInParent="true"> 
        </TextView>
    </RelativeLayout>    
<TableLayout android:id="@+id/TableLayout01" android:stretchColumns="*" android:layout_height="fill_parent" android:layout_width="wrap_content">

<TableRow android:id="@+id/TableRow01" android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="fill_parent">


	<ScrollView android:id="@+id/helpscrollview" 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		 android:layout_span="3">    

<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:padding="3px">
<TextView android:text="@string/wizard_transproxy_msg" 	android:textColor="#ffffff" android:id="@+id/WizardRootTextView01" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>


<CheckBox android:layout_marginTop="20px" android:text="@string/wizard_configure_all" android:id="@+id/WizardRootCheckBox01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"></CheckBox>
<TextView android:text="@string/wizard_transproxy_hint" 	android:textColor="#ffffff"  android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingBottom="20dip"></TextView>

<Button android:text="@string/wizard_configure_select_apps" android:id="@+id/WizardRootButton01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center"/>


			</LinearLayout>
		</ScrollView>
		
</TableRow>
<TableRow android:id="@+id/TableRow01" android:textColor="#00ff00" android:layout_width="fill_parent" android:layout_height="30px">
	   	<Button android:text="Back" android:id="@+id/btnWizard1" android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>
    	<Button android:text="Next" android:id="@+id/btnWizard2"  android:layout_weight="1" android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>	    
</TableRow>			
</TableLayout>
</LinearLayout>



